modify expirence section

--- a/css/styles.css
+++ b/css/styles.css
@@ -9801,7 +9801,8 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #bd5d38 !important;
+  color: #7FA4C9 !important;
+  /* color: #bd5d38 !important; */
 }
 
 .text-primary2 {
