--- a/css/styles.css
+++ b/css/styles.css
@@ -159,12 +159,17 @@ sup {
 }
 
 a {
-  color: #bd5d38;
+  /* color: #bd5d38; */
+  /* color: #343a40; black */
+  /* color: #7FA4C9;  dark blue*/
+  /* color: #495057; */
+  color: inherit;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #824027;
+  /* color: #7FA4C9; */
+  color: inherit;
   text-decoration: underline;
 }
 
