background image testing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10147,3 +10147,9 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+
+.bgimg_roush {
+	/* background-image: url('../assets/img/578_2.jpg');
+	background-size: cover;
+	background-position: center; */
+}
